correct conditional asterisk placed after jekyll if-statement

--- a/_items/2019-10-01-0003.md
+++ b/_items/2019-10-01-0003.md
@@ -25,7 +25,7 @@ A turquoise strap-back hat with a 1-inch purple embroidered Grateful Dead dancin
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 For fans and music critics alike, the Grateful Dead are emblematic of the "jam band" sound, a free-flowing musical art form that calls back to the practice of jazz musicians from the early 20th century in their movement between scripted and unscripted performance. As the first of the jam bands, the Grateful Dead took these practices into large arenas as part of the growth of rock and roll after it went mainstream in the mid 1950s, and their fans followed.[^1]
 
