--- a/_items/2019-10-01-0008.md
+++ b/_items/2019-10-01-0008.md
@@ -25,7 +25,7 @@ A ticket stub from Berlin's subway, dated to summer of 2019. This was Navdeep's 
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 In 2010, 954 million tourists traveled the globe; by 2018, that number rose to 1.4 billion, with European destinations being the some of the most visited.[^1] Germany, according to a 2017 article published by The Guardian, welcomed 37 million vistors from outside countries, while the U.S. had 87.8 million people travel abroad in some fashion. [^2] 16.6 million of those to Europe.
 
