--- a/_items/2019-10-01-0015.md
+++ b/_items/2019-10-01-0015.md
@@ -25,7 +25,7 @@ The Dorodango collection is a collection of mudballs that were collected by the 
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 If you, like our contributor, see the value of using mudballs to learn about Earth, creativity, meditation and oneself, try your hand! This video on the step-by-step process that takes mud from dirt and water to polished sphere was created by The Nito Project.
 
