--- a/_items/2019-10-03-0002.md
+++ b/_items/2019-10-03-0002.md
@@ -25,7 +25,7 @@ This alebrije is carved from wood in the shape of a cat, and painted in vivid co
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 If you are interested in the history of alebrije, this short documentary provides a brief background, a few interviews with those who create them, and the various stages of the process!
 
