--- a/_items/2019-10-03-0003.md
+++ b/_items/2019-10-03-0003.md
@@ -25,7 +25,7 @@ This "Happy Birthday" banner has been used in numerous birthdays here at Indiana
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 We have opportunties to engage in numerous celebrations that give one a sense of belonging. Whether that belonging is to a particular group, community, culture, etc., chances are that there is a celebration in the form of a festival, parade, cake-cutting, dance and more. Celebrations give us a way to express how we feel towards a particular group, object, person, location, entity, and one of those examples are birthdays.
 
