--- a/_items/2019-10-08-0001.md
+++ b/_items/2019-10-08-0001.md
@@ -26,7 +26,7 @@ These kente sashes are handmade sashes that are used as an accessory for special
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 Not only do these kente sashes represent the culture of the community our contributor grew up in, but also her own identity, as a student and an immigrant! 
 
