--- a/_items/2019-10-11-0001.md
+++ b/_items/2019-10-11-0001.md
@@ -24,7 +24,7 @@ This is a scrapbook that is still currently in the process of being created by t
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}*{% endif %}
 
 This temple represents how Indiana University participates in both national and international contexts. While it is a replica of  China's Golden Temple of Jeholwas and spent a lot of time exhibited at the New York’s World’s Fair in the 1920’s and 1930’s, its roots are in the midwest.  It was first built in Chicago from copper shillings from South Bend, Indiana and Indiana limestone. With various owners over the course of its existence, IU is now its fifth owner.[^1].
 
