copy edit 2019-10-03-0001.md

--- a/_items/2019-10-03-0001.md
+++ b/_items/2019-10-03-0001.md
@@ -34,4 +34,4 @@ Come February 1933, President Roosevelt called for the end of Prohibition with t
 
 [^1]: History.com Editors. [“Prohibition.”](https://www.history.com/topics/roaring-twenties/prohibition) History.com. A&E Television Networks, October 29, 2009.
 
-[^2]: [Speakeasies.](https://www.nyhistory.org/community/speakeasies). New-York Historical Society, n.d.
+[^2]: [Speakeasies.](https://www.nyhistory.org/community/speakeasies) New-York Historical Society, n.d.
